--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <section id="historia" class="pt-10 md:pt-12 pb-20 md:pb-24 bg-[#E6E7E8]">
+<section id="historia" class="pt-10 md:pt-12 pb-0 bg-[#E6E7E8]">
         <div class="container mx-auto px-4 text-center">
             <div class="max-w-xl w-full bg-[#4B4B34] p-3 md:p-5 rounded-sm shadow-2xl inline-block">
                 <div class="border-2 border-white/90">
@@ -141,7 +141,7 @@
         </div>
     </section>
     
-    <section id="regalos" class="py-20 md:py-24 bg-[#E6E7E8] section-divider">
+    <section id="regalos" class="pt-12 md:pt-16 pb-20 md:pb-24 bg-[#E6E7E8] section-divider">
         <div class="container mx-auto px-4">
             <div class="max-w-4xl mx-auto bg-[#F5F9E6] p-8 md:p-12 rounded-2xl shadow-lg text-center">
                 <h2 class="text-6xl text-center text-[#6C6E4A] mb-4">Mesa de Regalos</h2>
@@ -166,6 +166,8 @@
             </div>
         </div>
     </section>
+
+    ```
 
     <section id="rsvp" class="py-20 md:py-24 bg-[#F5F9E6] section-divider">
         <div class="container mx-auto px-4 max-w-4xl text-center">
