--- a/index.html
+++ b/index.html
@@ -153,17 +153,32 @@
 
             <div class="w-24 h-px bg-[#C5BCAD]/50 mx-auto mb-8"></div>
             
-            <p class="text-xl leading-relaxed text-[#C5BCAD] mb-10 max-w-2xl mx-auto">
+            <p class="text-xl leading-relaxed text-[#C5BCAD] mb-6 max-w-2xl mx-auto">
                 Sin embargo, si desean tener un detalle con nosotros, hemos preparado con mucho cariño una lista en Multicenter.
             </p>
+
+            <div class="my-8">
+                <img src="images/Logo de multicenter .jpg" alt="Logo Multicenter" class="mx-auto h-16 w-auto">
+            </div>
             
-            <div class="gift-links">
+            <div class="gift-links mb-12">
                 <a href="regalos.pdf" target="_blank" class="gift-link">
                     <i class="fas fa-scroll mr-2"></i> Ver Catálogo de Regalos
                 </a>
                 <a href="https://wa.me/59169000200?text=Hola,%20quisiera%20consultar%20sobre%20la%20lista%20de%20regalos%20para%20la%20boda%20de%20Javier%20y%20Nairobi." target="_blank" class="gift-link">
                     <i class="fab fa-whatsapp mr-2"></i> Consultar por WhatsApp
                 </a>
+            </div>
+
+            <div class="w-48 h-px bg-[#C5BCAD]/50 mx-auto mb-12"></div>
+
+            <div class="cash-gift-section">
+                <p class="text-xl leading-relaxed text-[#C5BCAD] mb-6">
+                    O también puedes regalarnos efectivo
+                </p>
+                <div class="qr-code-box w-48 h-48 bg-white mx-auto rounded-lg shadow-md flex items-center justify-center border-2 border-[#C5BCAD]">
+                    <span class="text-sm text-[#4B4B34]">Tu QR aquí</span>
+                </div>
             </div>
         </div>
     </section>
