--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </section>
 
-    <section id="el-gran-dia" class="pt-20 md:pt-24 pb-10 section-divider">
+    <section id="el-gran-dia" class="pt-20 md:pt-24 pb-10">
         <div class="container mx-auto">
             <div class="text-center mb-16">
                 <h2 class="text-6xl mb-4">El Gran Día</h2>
@@ -128,7 +128,7 @@
         </div>
     </section>
 
-    <section id="historia" class="pt-10 md:pt-12 pb-10 bg-[#E6E7E8] section-divider">
+    <section id="historia" class="pt-10 md:pt-12 pb-10 bg-[#E6E7E8]">
         <div class="container mx-auto px-4 text-center">
             <div class="max-w-xl w-full bg-[#4B4B34] p-3 md:p-5 rounded-sm shadow-2xl inline-block">
                 <div class="border-2 border-white/90">
@@ -141,8 +141,8 @@
             </div>
         </div>
     </section>
-    
-    <section id="regalos" class="pt-10 md:pt-12 pb-20 md:pb-24 section-divider">
+
+    <section id="regalos" class="pt-10 md:pt-12 pb-20 md:pb-24">
         <div class="container mx-auto px-4 max-w-3xl text-center">
 
             <h2 class="text-6xl text-[#F5F9E6] mb-8">Mesa de Regalos</h2>
@@ -265,7 +265,7 @@
         </div>
     </section>
 
-    <section id="galeria" class="py-20 md:py-24 section-divider">
+    <section id="galeria" class="py-20 md:py-24">
         <div class="container mx-auto px-4 max-w-7xl">
             <div class="text-center max-w-3xl mx-auto">
                 <h2 class="text-6xl text-[#F5F9E6] mb-8">Nuestra Galería</h2>
