--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
         </div>
     </section>
 
-    <section id="galeria" class="py-20 md:py-24">
+    <section id="galeria" class="pt-20 md:pt-24">
         <div class="container mx-auto px-4 max-w-7xl">
             <div class="text-center max-w-3xl mx-auto">
-                <h2 class="text-6xl text-[#F5F9E6] mb-8">Nuestra Galería</h2>
+                <h2 class="text-6xl text-[#F5F9E6] mb-8">Nuestras Fotos</h2>
                 <div class="w-24 h-px bg-[#C5BCAD]/50 mx-auto mb-8"></div>
                 <p class="text-xl leading-relaxed text-[#C5BCAD] mb-12">
                     Un pequeño vistazo de nuestra sesión de fotos, momentos que quedaran para siempre.
