--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <p class="dress-code-subtitle">FORMAL</p>
             
             <div class="dress-code-note">
-                <p>Con cariño, les pedimos reservar el color <strong>blanco para la novia</strong> y los tonos <strong>verdes para el cortejo</strong>. ¡Gracias!</p>
+                <p>Con cariño, les pedimos reservar el color <strong>blanco para la novia</strong> y los tonos <strong>verdes para el novio</strong>. ¡Gracias!</p>
             </div>
             
             <div class="dress-code-container">
