--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/leaves.css">
-    <link rel="stylesheet" href="css/rama.css">
 
     <link rel="preload" href="images/hero-background.jpg" as="image">
 </head>
@@ -24,7 +23,6 @@
 <body class="bg-[#F5F9E6] text-[#4B4B34] font-montserrat"> 
 
     <div class="fixed top-0 left-0 w-full bg-[#F5F9E6] z-20 h-2 shadow-md"></div>
-
 
     <main>
 
@@ -35,8 +33,8 @@
 
             <h1 class="text-6xl md:text-7xl font-marck-script text-[#F5F9E6] drop-shadow-lg mb-6">Javier & Nairobi</h1>
 
-            <div class="font-playfair-display text-white/95 drop-shadow-md tracking-wider text-center" style="font-size: 1.1em; font-style: italic;">
-                <p class="text-base md:text-lg">Nuestro amor, un regalo de Dios, se convierte hoy en un pacto eterno, un solo corazón y una sola alma, para amarnos y honrarnos por siempre.</p>
+            <div class="font-playfair-display text-white/95 drop-shadow-md tracking-wider text-center italic">
+                <p class="text-sm md:text-lg">Nuestro amor, un regalo de Dios, se convierte hoy en un pacto eterno, un solo corazón y una sola alma, para amarnos y honrarnos por siempre.</p>
             </div>
 
         </div>
@@ -87,7 +85,7 @@
                     <span class="block text-2xl md:text-3xl font-light tracking-widest uppercase">
                         Sábado
                     </span>
-                    <span class="block text-8xl md:text-9xl font-playfair-display font-bold leading-none my-2">
+                    <span class="block text-8xl md:text-9xl font-cormorant-garamond font-bold leading-none my-2">
                         25
                     </span>
                     <span class="block text-xl md:text-2xl font-light tracking-wider">
